--- a/projects/bmc/src/app/app/app.component.html
+++ b/projects/bmc/src/app/app/app.component.html
@@ -85,40 +85,26 @@
       <div class="footer">
         <div class="row">
           <div class="col-sm-12 links">
-            <a href="https://www.github.com/tomastrajan" target="_blank">
+            <a href="https://github.com/bogdanMchelariu/" target="_blank">
               <fa-icon [icon]="['fab','github']"></fa-icon>
               <span>Github</span>
             </a>
-            <a href="https://www.medium.com/@tomastrajan" target="_blank">
-              <fa-icon [icon]="['fab','medium-m']"></fa-icon>
-              <span>Medium</span>
+            <a href="https://www.linkedin.com/in/bogdan-chelariu-7a580bb6/" target="_blank">
+              <fa-icon [icon]="['fab','linkedin']"></fa-icon>
+              <span>LinkedIn</span>
             </a>
-            <a href="https://www.twitter.com/tomastrajan" target="_blank">
-              <fa-icon [icon]="['fab','twitter']"></fa-icon>
-              <span>Twitter</span>
-            </a>
-            <a href="https://www.youtube.com/channel/UC7XgRHIVoqnh3U5Vmly9ofQ"
-               target="_blank">
-              <fa-icon [icon]="['fab','youtube']"></fa-icon>
-              <span>Youtube</span>
-            </a>
-            <a href="https://www.instagram.com/tomastrajan" target="_blank">
-              <fa-icon [icon]="['fab','instagram']"></fa-icon>
-              <span>Instagram</span>
-            </a>
-            <a href="https://www.slides.com/tomastrajan" target="_blank">
-              <fa-icon icon="play-circle"></fa-icon>
-              <span>Slides</span>
+            <a href="mailto:chelariu.bogdan.91@gmail.com" target="_blank">
+              <fa-icon icon="envelope"></fa-icon>
+              <span>Gmail</span>
             </a>
           </div>
         </div>
         <div class="row">
           <div class="col-12 signature">
-            &#169; <span class="year">{{year}}</span> - Tomas Trajan
+            &#169; <span class="year">{{year}}</span> - Bogdan Chelariu
             <br class="d-block d-sm-none">
             <a [matTooltip]="'bmc.footer.changelog' | translate"
-               matTooltipPosition="before"
-               href="https://github.com/tomastrajan/angular-ngrx-material-starter/blob/master/CHANGELOG.md">
+               matTooltipPosition="before">
               <fa-icon icon="rocket"></fa-icon>
               {{version}} <span *ngIf="!isProd">[{{envName}}]</span>
             </a>
