--- a/projects/bmc/src/app/app/app.component.html
+++ b/projects/bmc/src/app/app/app.component.html
@@ -10,19 +10,15 @@
           routerLinkActive="active">
           {{item.label | translate}}
         </a>
-        <a mat-list-item href="https://github.com/tomastrajan/angular-ngrx-material-starter" target="_blank">
-          Github
-        </a>
       </mat-nav-list>
     </mat-sidenav>
 
     <div class="wrapper">
 
       <div class="toolbar" [style.position]="(stickyHeader$ | async) ? 'fixed' : 'inherit'" [class.mat-elevation-z4]="(stickyHeader$ | async)">
-        <mat-toolbar color="primary">
+        <mat-toolbar [color]="(theme$ | async) === 'black-theme' ? 'primary' : 'accent'">
           <button mat-icon-button class="d-md-none" (click)="sidenav.open()">
             <fa-icon icon="bars"></fa-icon>
-
           </button>
 
           <span routerLink="" class="branding spacer center d-inline d-sm-none">
@@ -39,34 +35,9 @@
             </button>
           </span>
 
-          <button mat-button mat-stroked-button color="accent" *ngIf="!(isAuthenticated$ | async)" (click)="onLoginClick()">
-            {{ 'bmc.menu.login' | translate }}
-          </button>
-
-          <button *ngIf="(isAuthenticated$ | async)"
-                  mat-icon-button
-                  [matMenuTriggerFor]="toolbarUserMenu">
-            <fa-icon icon="user-circle"></fa-icon>
-          </button>
-          <mat-menu #toolbarUserMenu="matMenu">
-            <button mat-menu-item (click)="onLogoutClick()">
-              <mat-icon><fa-icon icon="power-off"></fa-icon></mat-icon>
-              <span>{{ 'bmc.menu.logout' | translate }}</span>
-            </button>
-          </mat-menu>
-
           <button mat-icon-button routerLink="settings" class="d-none d-sm-inline">
             <fa-icon icon="cog"></fa-icon>
           </button>
-
-          <a [matTooltip]="'bmc.header.github' | translate"
-             matTooltipPosition="before"
-             mat-icon-button
-             class="link d-none d-sm-inline"
-             href="https://github.com/tomastrajan/angular-ngrx-material-starter"
-             target="_blank">
-            <fa-icon [icon]="['fab','github']"></fa-icon>
-          </a>
 
           <span *ngIf="language$ | async as language">
             <mat-select [ngModel]="language" (selectionChange)="onLanguageSelect($event)">
