--- a/projects/bmc/src/app/features/about/about/about.component.scss
+++ b/projects/bmc/src/app/features/about/about/about.component.scss
@@ -12,34 +12,10 @@ h2 {
 }
 
 .background {
-  padding: 80px 0 0 0;
+  padding: 80px 0 80px 0;
   position: relative;
 
-  .actions {
-    text-align: center;
-    margin: 50px;
-    z-index: 1;
 
-    span {
-      display: inline-block;
-      font-weight: bold;
-      padding: 20px 10px 30px 10px;
-    }
-
-    a {
-      margin: 0 5px 10px 0;
-
-      &.actions-main {
-        text-transform: uppercase;
-        padding: 3px 24px;
-      }
-
-      fa-icon {
-        position: relative;
-        bottom: 1px;
-      }
-    }
-  }
 
   .get-started {
     max-width: 700px;
@@ -49,12 +25,8 @@ h2 {
     z-index: 1;
     overflow: hidden;
 
-    code {
-      font-size: 0.9em;
-      display: inline-block;
-      word-wrap: break-word;
-      white-space: normal;
-      margin: 0 0 10px 0;
+    p{
+      white-space: pre-line;
     }
   }
 
@@ -64,9 +36,9 @@ h2 {
     left: 0;
     bottom: 0;
     right: 0;
-    background: url('../../../../assets/intro.jpg') no-repeat center top;
+    background: url('../../../../assets/intro.jpg') no-repeat center center fixed;
     background-size: cover;
-    opacity: 0.7;
+    opacity: 1;
     content: '';
     z-index: 0;
   }
@@ -85,115 +57,5 @@ h2 {
 
   .container {
     position: relative;
-  }
-}
-
-.follow-releases {
-  max-width: 700px;
-  margin: 0 auto 60px auto;
-
-  p {
-    line-height: 40px;
-
-    a {
-      border-bottom: 3px solid;
-    }
-  }
-
-  img {
-    display: block;
-    max-width: 80%;
-    margin: 20px auto 0 auto;
-    border-radius: 5px;
-    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),
-      0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
-  }
-}
-
-.contributors {
-  max-width: 700px;
-  margin: 0 auto 60px auto;
-
-  p {
-    a {
-      border-bottom: 3px solid;
-    }
-  }
-
-  .contributors-wrapper {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    flex-wrap: wrap;
-
-    a {
-      margin: 8px;
-      width: 100px;
-      display: inline-block;
-      text-align: center;
-
-      span {
-        display: inline-block;
-        padding: 10px 0 0 0;
-        line-height: 16px;
-      }
-
-      img {
-        border-radius: 50%;
-        width: 100px;
-        border: 5px solid;
-        box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),
-          0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
-      }
-    }
-  }
-}
-
-@media (max-width: map-get($grid-breakpoints, md)) {
-  .background {
-    .actions {
-      margin: 50px 0;
-    }
-    .get-started {
-      width: auto;
-    }
-  }
-  .follow-releases {
-    width: auto;
-
-    img {
-      max-width: 100%;
-    }
-  }
-}
-
-@media (max-width: map-get($grid-breakpoints, sm)) {
-  .background {
-    padding: 40px 0 0 0;
-
-    h1 {
-      line-height: 1em;
-    }
-
-    .actions {
-      margin: 40px 0 0 0;
-
-      span {
-        padding: 10px 0 20px 0;
-      }
-
-      a {
-        width: 100%;
-      }
-    }
-
-    .get-started {
-      width: auto;
-      margin: 40px auto 40px auto;
-    }
-  }
-
-  .follow-releases {
-    margin: 0 auto 40px auto;
   }
 }
